--- a/_config.yml
+++ b/_config.yml
@@ -219,6 +219,7 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+  math_engine: null
 
 
 # Sass/SCSS
@@ -325,3 +326,4 @@ defaults:
       comments: true
       share: false
       related: false
+
